<resources>
    <string name="home">Home</string>
    <string name="app_name">Exit Sheet</string>
    <string name="name">First Name,Last Name,Patronymic</string>
    <string name="exit_time">Exit time</string>
    <string name="exit_address">Exit address</string>
    <string name="address_and_name_of_the_place_of_visit">Address and name of the place of visit</string>
    <string name="purpose_of_the_visit">Purpose of the visit</string>
    <string name="expected_return_time">Expected return time</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="exit_shit_title">Exit Sheet</string>
    <string name="settings">Settings</string>
    <string name="download_pdf">Download Pdf</string>
    <string name="share">Share</string>
    <string name="sign">Sign</string>
    <string name="sign_pdf">Sign</string>
    <string name="select_language">Language</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="choose_language">Choose Language</string>
    <string name="app_version">App Version:</string>
</resources>
